syntax="proto3";

package order_service;
option go_package="genproto/order_service";

import "google/protobuf/empty.proto";


message CreateBikeReq {
    string bike_status = 1;
    string bike_number = 2;
    string bike_model = 3;
    double started_price = 4;
    double end_price = 5;
    string colour = 6;
}

message CreateBikeResponse {
    string bike_status = 1;
    string bike_number = 2;
    string bike_model = 3;
    double started_price = 4;
    double end_price = 5;
    string colour = 6;
    string id = 7;
    string created_at = 8;
    string updated_at = 9;
}

message BikeId {
    string id = 1;
}

message GetSingleBikeResponse {
    string bike_status = 1;
    string bike_number = 2;
    string bike_model = 3;
    double started_price = 4;
    double end_price = 5;
    string colour = 6;
    string id = 7;
    string created_at = 8;
    string updated_at = 9;
}

message GetListBikesReq {
    int32 limit = 1;
    int32 offset = 2;
}

message GetListBikesResponse {
    repeated GetSingleBikeResponse getBikes = 1;
    int32 count = 2;
}

message UpdateBikeReq {
    string bike_status = 1;
    string bike_number = 2;
    string bike_model = 3;
    double started_price = 4;
    double end_price = 5;
    string colour = 6;
    string id = 7;
}

message UpdateBikeResponse {
    string bike_status = 1;
    string bike_number = 2;
    string bike_model = 3;
    double started_price = 4;
    double end_price = 5;
    string colour = 6;
    string id = 7;
    string created_at = 8;
    string updated_at = 9;
}